--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "binshops/laravel-blog": "^9.2",
         "bugsnag/bugsnag-laravel": "^2.21",
+        "cjmellor/approval": "^1.0",
         "doctrine/dbal": "^3.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/dusk": "^6.11",
-        "laravel/framework": "^8.12",
+        "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.8",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
@@ -23,14 +25,15 @@
         "livewire/livewire": "^2.3",
         "owen-it/laravel-auditing": "^13.0",
         "qcod/laravel-gamify": "^1.0",
+        "realrashid/sweet-alert": "^5.1",
         "wire-elements/modal": "^1.0"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
+        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.3.3"
     },
     "config": {
