--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
         "livewire/livewire": "^2.3",
+        "mews/captcha": "^3.2",
         "owen-it/laravel-auditing": "^13.0",
         "propaganistas/laravel-phone": "^4.3",
         "qcod/laravel-gamify": "^1.0",
