--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
         "laravel/ui": "^3.2",
         "livewire/livewire": "^2.3",
         "mews/captcha": "^3.2",
+        "mikehaertl/php-pdftk": "^0.12.1",
         "owen-it/laravel-auditing": "^13.0",
+        "paynow/php-sdk": "^1.0",
         "propaganistas/laravel-phone": "^4.3",
         "qcod/laravel-gamify": "^1.0",
         "realrashid/sweet-alert": "^5.1",
